add new post and updated settings

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# Only the main Sass file nds front matter (the dashes are enough)
 ---
 @charset "utf-8";
 
@@ -602,7 +602,7 @@ pre {
     @extend %vertical-rhythm;
 
     .c     { color: #998; font-style: italic } // Comment
-    .err   { color: #a61717; background-color: #e3d2d2 } // Error
+    .err   { color: #a61717; background-color:  3d2d2 } // Error
     .k     { font-weight: bold } // Keyword
     .o     { font-weight: bold } // Operator
     .cm    { color: #998; font-style: italic } // Comment.Multiline
