update for mathjax and kramdown issue

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@ layout: default
   <article class="h-entry">
     {% include page-image.html %}
     <div class="page-wrapper">
+      <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+      </script>
       <header class="page-header">
         {% assign title = page.title | markdownify | strip_html %}
         {% if page.link %}
